--- a/QuizPlatform.Application/QuizPlatform.Application.csproj
+++ b/QuizPlatform.Application/QuizPlatform.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="8.6.3" />
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="Mapster" Version="7.4.0" />
   </ItemGroup>
