--- a/QuizPlatform.Core/QuizPlatform.Core.csproj
+++ b/QuizPlatform.Core/QuizPlatform.Core.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="FuzzySharp" Version="2.0.2" />
+
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.18" />
   </ItemGroup>
 
